дипломный проект:главная страница доработки

--- a/calcs.html
+++ b/calcs.html
@@ -18,7 +18,7 @@
     </div>
     <ul class="header__nav">
       <li class="nav__item">
-        <a href="main.html#section-start">С чего начать?</a>
+        <a href="main.html">С чего начать?</a>
       </li>
       <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
       <li class="nav__item"><a href="#">Питание</a></li>
