--- a/exercises.html
+++ b/exercises.html
@@ -18,7 +18,7 @@
     </div>
     <ul class="header__nav">
       <li class="nav__item">
-        <a href="main.html#section-start">С чего начать?</a>
+        <a href="main.html">С чего начать?</a>
       </li>
       <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
       <li class="nav__item"><a href="#">Питание</a></li>
@@ -33,12 +33,17 @@
 <!-- !header -->
     <!-- main -->
     <section class="section-outer section-main">
+      <a href="#section-exercices"
+        ><div class="arrow one">
+          <img src="img/white-arrow.png" alt="" /></div
+      ></a>
+      <a href="#section-exercices"
+        ><div class="arrow two">
+          <img src="img/white-arrow.png" alt="" /></div
+      ></a>
       <div class="section-inner section-main__container">
         <div class="section-main__text">
           <span>База упражнений</span>
-        </div>
-        <div class="section-main__button">
-          <a href="#section-exercices">начать</a>
         </div>
       </div>
     </section>
