--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     </div>
     <ul class="header__nav">
       <li class="nav__item">
-        <a href="main.html#section-start">С чего начать?</a>
+        <a href="main.html">С чего начать?</a>
       </li>
       <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
       <li class="nav__item"><a href="#">Питание</a></li>
@@ -81,10 +81,11 @@
               <div class="text-block__text">
                 <h3>Тренировки</h3>
                 <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Repellat delectus placeat harum deleniti ipsum dolore
-                  obcaecati quae amet nulla fuga, sed corporis culpa
-                  necessitatibus nisi rerum quam quos at alias.
+                  Выбор правильной программы тренировок один из важнейших
+                  факторов в становлении здорового духа и здорового тела. Очень
+                  важно суметь правильно выбрать программу исходя из вашего
+                  расписания (количество тренировок в неделю), ваших
+                  физиологических особенностей и конечно же ваших целей.
                 </p>
               </div>
               <div class="text-block__number-and-image">
@@ -108,11 +109,8 @@
                   как старательно добирали белок и калории в своем рационе, –
                   это не так важно, как время, которое необходимо для содействия
                   нутриентов и гормонов для синтеза мышечных белков после
-                  занятия. Упражнения и еда – это важная часть уравнения
-                  мышечного роста, но далеко не все. Очень важно адекватное
-                  восстановление – необходимо дать мышцам достаточно времени для
-                  пополнения запасов гликогена и протекания процессов
-                  реконструкции и создания новой мышечной ткани.
+                  занятия. Не умея правильно отдыхать нельзя добиться высоких
+                  результатов.
                 </p>
               </div>
               <div class="text-block__number-and-image">
@@ -141,10 +139,11 @@
               <div class="content__text-and-button">
                 <div class="text-and-button__text">
                   <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Asperiores quam recusandae provident optio, omnis non
-                    cupiditate suscipit libero! Iste sed sint alias rem, veniam
-                    illum aperiam recusandae libero? Dolor, doloremque.
+                    Главным принципом набора массы является избыток потребляемых
+                    калорий, пища должна быть питательной, сбалансированной.
+                    Если организм не получает достаточное количество питательных
+                    веществ, в этом случае рост мышц невозможен. На вопрос
+                    "Будешь кушать?" отныне только один правильный ответ.
                   </p>
                 </div>
                 <div class="text-and-button__button">
@@ -162,10 +161,13 @@
               <div class="content__text-and-button">
                 <div class="text-and-button__text">
                   <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Asperiores quam recusandae provident optio, omnis non
-                    cupiditate suscipit libero! Iste sed sint alias rem, veniam
-                    illum aperiam recusandae libero? Dolor, doloremque.
+                    Худеть нужно правильно. Соблюдение слишком жестких диет и
+                    голодовок может еще больше усугубить ситуацию. Как бы вас не
+                    пугало словосочетание "Правильно питание", необходимо
+                    ознакомиться с ним и стать хорошими друзьями. Есть нужно
+                    часто и понемногу, и будьте готовы всегда иметь в кармане
+                    мелочь для покупки воды, пить придется много. Будь
+                    дисциплинирован и результат не заставит себя ждать
                   </p>
                 </div>
                 <div class="text-and-button__button">
@@ -192,10 +194,10 @@
               <h3>Силовые тренировки</h3>
             </div>
             <div class="item__text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Excepturi odio quas et reprehenderit molestias asperiores facilis
-              quos officiis praesentium magni. Enim optio sint, eos aspernatur
-              itaque dolore. Error, sit quos.
+              Силовые тренировки — это упражнения, при которых максимально
+              задействованы мышечные ткани. Как правило, эффективные силовые
+              тренировки проходят с отягощением. Очень важно дать мышцам такую
+              нагрузку, которая станет для них предельной.
             </div>
           </div>
           <div class="list__item">
@@ -206,10 +208,11 @@
               <h3>Кардио тренировки</h3>
             </div>
             <div class="item__text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Excepturi odio quas et reprehenderit molestias asperiores facilis
-              quos officiis praesentium magni. Enim optio sint, eos aspernatur
-              itaque dolore. Error, sit quos.
+              Кардио — это тип упражнений, при которых тренируется выносливость
+              всего организма. При этом ощутимый результат кардио-занятий
+              зависит во многом от количества времени, уделенного им. То есть,
+              используя такой вид тренинга, придется бегать, плавать или
+              заниматься на велотренажере с максимальным усилием.
             </div>
           </div>
           <div class="list__item">
@@ -220,15 +223,74 @@
               <h3>Работа со своим весом</h3>
             </div>
             <div class="item__text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Excepturi odio quas et reprehenderit molestias asperiores facilis
-              quos officiis praesentium magni. Enim optio sint, eos aspernatur
-              itaque dolore. Error, sit quos.
+              Такие занятия еще называют калистеникой. В переводе с греческого
+              языка «kalos» – красота, а «sthenos» – сила. Главным инструментом
+              в данном случае является сам человек. При работе со собственной
+              тяжестью используется минимум оборудования. Такие тренировки
+              направлены на повышение гибкости, скорости и силовых
+              характеристик.
             </div>
           </div>
         </div>
       </div>
     </section>
+    <!-- !trens -->
+    <!-- trens -->
+    <!-- <section class="section-outer section-relax">
+      <div class="section-inner section-relax__container">
+        <div class="section-relax__title"><h2>Восстановление</h2></div>
+        <div class="section-relax__text">
+          <p>
+            После тренировки важно дать организму возможность отдохнуть от
+            нагрузок и восстановиться к следующему занятию. Чем лучше
+            восстановление, тем больше шансов превратить всё наработанное
+            усердными тренировками в отличный результат.
+          </p>
+        </div>
+        <div class="section-relax__list">
+          <div class="list__item">
+            <div class="item__image">
+              <img src="img/main/relax-1.png" alt="" />
+            </div>
+            <div class="item__title-and-text">
+              <div class="item__title"><h3>Питание после тренировки</h3></div>
+              <div class="item__text">
+                Сразу после тренировки стоит принять порцию белка, который
+                защитит мышцы от повреждений и поможет организму восстановиться.
+              </div>
+            </div>
+          </div>
+          <div class="list__item">
+            <div class="item__image">
+              <img src="img/main/relax-2.png" alt="" />
+            </div>
+            <div class="item__title-and-text">
+              <div class="item__title"><h3>Массаж</h3></div>
+              <div class="item__text">
+                Массаж – лучшее средство для быстрой регенерации после
+                тренировок. Массаж способствует усилению кровообращения в мышцах
+                и внутренних органах, что помогает восстановлению.
+              </div>
+            </div>
+          </div>
+          <div class="list__item">
+            <div class="item__image">
+              <img src="img/main/relax-3.png" alt="" />
+            </div>
+            <div class="item__title-and-text">
+              <div class="item__title">
+                <h3>Сон</h3>
+              </div>
+              <div class="item__text">
+                Главное условие восстановления после тренировки - достаточное
+                количество сна. Во сне происходит интенсивное восстановление
+                организма в целом и мышц в частности
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
     <!-- !trens -->
 <!-- Site footer -->
 <link
