дипломный проект:доработки + страница Питание

--- a/exercises.html
+++ b/exercises.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,18 +16,26 @@
         ><img class="logo" src="img/logo.png" alt="Логотип"
       /></a>
     </div>
-    <ul class="header__nav">
-      <li class="nav__item">
-        <a href="main.html">С чего начать?</a>
-      </li>
-      <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
-      <li class="nav__item"><a href="#">Питание</a></li>
-      <li class="nav__item"><a href="#">Программы</a></li>
-      <li class="nav__item"><a href="calcs.html">Калькуляторы</a></li>
-      <li class="nav__item">
-        <a href="calories.html">Таблица калорийности</a>
-      </li>
-    </ul>
+
+    <div class="header__nav">
+      <ul class="header__nav-list">
+        <li class="nav__item">
+          <a href="main.html">С чего начать?</a>
+        </li>
+        <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
+        <li class="nav__item"><a href="pitanie.html">Питание</a></li>
+        <li class="nav__item"><a href="#">Программы</a></li>
+        <li class="nav__item"><a href="calcs.html">Калькуляторы</a></li>
+        <li class="nav__item">
+          <a href="calories.html">Таблица калорийности</a>
+        </li>
+      </ul>
+      <div class="burger">
+        <div class="line half start"></div>
+        <div class="line"></div>
+        <div class="line half end"></div>
+      </div>
+    </div>
   </div>
 </section>
 <!-- !header -->
@@ -559,28 +567,39 @@
       </p>
       <ul class="social-icons">
         <li>
-          <a class="facebook" href="https://vk.com/bg_prostak"
+          <a class="facebook" href="https://vk.com/bg_prostak" target="_blank"
             ><i class="fa fa-vk"></i
           ></a>
         </li>
         <li>
-          <a class="twitter" href="#"><i class="fa fa-instagram"></i></a>
+          <a class="twitter" href="https://t.me/Mollaev_S" target="_blank"
+            ><i class="fa fa-telegram"></i
+          ></a>
         </li>
         <li>
-          <a class="dribbble" href="#"><i class="fa fa-github"></i></a>
+          <a
+            class="dribbble"
+            href="https://github.com/bg-prostak"
+            target="_blank"
+            ><i class="fa fa-github"></i
+          ></a>
         </li>
         <li>
           <div class="button music1">
-            <a class="linkedin" href="#"
+            <a
+              class="linkedin"
+              href="http://mus-man.ru"
+              target="_blank"
+              title="Второй самый лучший сайт в мире created by Vitaliy_уничтожитель для любителей музыки, там даже 100 штук музыкантов популярных есть и часть из них умерла даже но это не повод расстраиваться, все мы умрем, там Цой есть даже"
               ><i class="fa fa-music" aria-hidden="true"></i
             ></a>
           </div>
         </li>
       </ul>
 
-      <!-- <audio id="sound-link" preload="auto">
-        <source src="audio/12.mp3" type="audio/mpeg" />
-      </audio> -->
+      <audio id="sound-link" preload="auto">
+        <source src="audio/13.mp3" type="audio/mpeg" />
+      </audio>
 
       <script src="js/jquery-3.6.0.min.js"></script>
       <script src="js/script.js"></script>
