--- a/#source/footer.html
+++ b/#source/footer.html
@@ -11,28 +11,39 @@
       </p>
       <ul class="social-icons">
         <li>
-          <a class="facebook" href="https://vk.com/bg_prostak"
+          <a class="facebook" href="https://vk.com/bg_prostak" target="_blank"
             ><i class="fa fa-vk"></i
           ></a>
         </li>
         <li>
-          <a class="twitter" href="#"><i class="fa fa-instagram"></i></a>
+          <a class="twitter" href="https://t.me/Mollaev_S" target="_blank"
+            ><i class="fa fa-telegram"></i
+          ></a>
         </li>
         <li>
-          <a class="dribbble" href="#"><i class="fa fa-github"></i></a>
+          <a
+            class="dribbble"
+            href="https://github.com/bg-prostak"
+            target="_blank"
+            ><i class="fa fa-github"></i
+          ></a>
         </li>
         <li>
           <div class="button music1">
-            <a class="linkedin" href="#"
+            <a
+              class="linkedin"
+              href="http://mus-man.ru"
+              target="_blank"
+              title="Второй самый лучший сайт в мире created by Vitaliy_уничтожитель для любителей музыки, там даже 100 штук музыкантов популярных есть и часть из них умерла даже но это не повод расстраиваться, все мы умрем, там Цой есть даже"
               ><i class="fa fa-music" aria-hidden="true"></i
             ></a>
           </div>
         </li>
       </ul>
 
-      <!-- <audio id="sound-link" preload="auto">
-        <source src="audio/12.mp3" type="audio/mpeg" />
-      </audio> -->
+      <audio id="sound-link" preload="auto">
+        <source src="audio/13.mp3" type="audio/mpeg" />
+      </audio>
 
       <script src="js/jquery-3.6.0.min.js"></script>
       <script src="js/script.js"></script>
