--- a/#source/header.html
+++ b/#source/header.html
@@ -6,18 +6,26 @@
         ><img class="logo" src="img/logo.png" alt="Логотип"
       /></a>
     </div>
-    <ul class="header__nav">
-      <li class="nav__item">
-        <a href="main.html">С чего начать?</a>
-      </li>
-      <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
-      <li class="nav__item"><a href="#">Питание</a></li>
-      <li class="nav__item"><a href="#">Программы</a></li>
-      <li class="nav__item"><a href="calcs.html">Калькуляторы</a></li>
-      <li class="nav__item">
-        <a href="calories.html">Таблица калорийности</a>
-      </li>
-    </ul>
+
+    <div class="header__nav">
+      <ul class="header__nav-list">
+        <li class="nav__item">
+          <a href="main.html">С чего начать?</a>
+        </li>
+        <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
+        <li class="nav__item"><a href="pitanie.html">Питание</a></li>
+        <li class="nav__item"><a href="#">Программы</a></li>
+        <li class="nav__item"><a href="calcs.html">Калькуляторы</a></li>
+        <li class="nav__item">
+          <a href="calories.html">Таблица калорийности</a>
+        </li>
+      </ul>
+      <div class="burger">
+        <div class="line half start"></div>
+        <div class="line"></div>
+        <div class="line half end"></div>
+      </div>
+    </div>
   </div>
 </section>
 <!-- !header -->
