дипломный проект:Страница Тренировки + доработки

--- a/#source/header.html
+++ b/#source/header.html
@@ -14,7 +14,7 @@
         </li>
         <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
         <li class="nav__item"><a href="pitanie.html">Питание</a></li>
-        <li class="nav__item"><a href="#">Программы</a></li>
+        <li class="nav__item"><a href="trens.html">Тренировки</a></li>
         <li class="nav__item"><a href="calcs.html">Калькуляторы</a></li>
         <li class="nav__item">
           <a href="calories.html">Таблица калорийности</a>
