--- a/calcs.html
+++ b/calcs.html
@@ -24,7 +24,7 @@
         </li>
         <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
         <li class="nav__item"><a href="pitanie.html">Питание</a></li>
-        <li class="nav__item"><a href="#">Программы</a></li>
+        <li class="nav__item"><a href="trens.html">Тренировки</a></li>
         <li class="nav__item"><a href="calcs.html">Калькуляторы</a></li>
         <li class="nav__item">
           <a href="calories.html">Таблица калорийности</a>
@@ -46,12 +46,7 @@
           <h2>Калькуляторы</h2>
         </div>
         <div class="section-main__text">
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum
-            voluptatum asperiores provident veniam aut corrupti. Modi sint
-            quaerat soluta autem dolore sit. Nostrum dolores architecto quidem
-            cupiditate aliquid, quod nihil.
-          </p>
+          <p></p>
         </div>
         <div class="section-main__buttons-list">
           <div class="section-main__button">
