--- a/exercises.html
+++ b/exercises.html
@@ -24,7 +24,7 @@
         </li>
         <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
         <li class="nav__item"><a href="pitanie.html">Питание</a></li>
-        <li class="nav__item"><a href="#">Программы</a></li>
+        <li class="nav__item"><a href="trens.html">Тренировки</a></li>
         <li class="nav__item"><a href="calcs.html">Калькуляторы</a></li>
         <li class="nav__item">
           <a href="calories.html">Таблица калорийности</a>
@@ -138,6 +138,39 @@
                   </div>
                   <p class="item__text"></p>
                   <h3 class="item__title">Жим Свенда</h3>
+                </a>
+              </div>
+              <div class="upr__item upr__item-7">
+                <a href="#chest-7" class="popup-link item__link to-chest-7">
+                  <div class="item__image">
+                    <img
+                      src="img/exercices/chest/Грудь-отжимания-от-веревки.png"
+                      alt=""
+                    />
+                  </div>
+                  <p class="item__text"></p>
+                  <h3 class="item__title">TRX Отжимания</h3>
+                </a>
+              </div>
+              <div class="upr__item upr__item-8">
+                <a href="#chest-8" class="popup-link item__link to-chest-8">
+                  <div class="item__image">
+                    <img
+                      src="img/exercices/chest/Грудь-жим-гантелей-в-наклоне.png"
+                      alt=""
+                    />
+                  </div>
+                  <p class="item__text"></p>
+                  <h3 class="item__title">Жим гантелей на наклонной скамье</h3>
+                </a>
+              </div>
+              <div class="upr__item upr__item-9">
+                <a href="#chest-9" class="popup-link item__link to-chest-9">
+                  <div class="item__image">
+                    <img src="img/exercices/chest/Грудь-жим-смитт.png" alt="" />
+                  </div>
+                  <p class="item__text"></p>
+                  <h3 class="item__title">Жим на тренажере Смитта</h3>
                 </a>
               </div>
             </div>
